# msegroups-userprofile-service

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  build.ps1  build.sh
.github/workflows/: aws-update-service.yml  docker_build_push.yaml
imageuploadtest/: Cargo.toml
imageuploadtest/src/: main.rs
testmongodb/: Cargo.toml
testmongodb/src/: main.rs
userprofile-api/: Cargo.toml  Rocket.toml
userprofile-api/src/: main.rs
userprofile-api/src/api/: avatar_api.rs  mod.rs  user_api.rs
userprofile-api/src/models/: user_model.rs
userprofile-api/src/repository/: mod.rs  mongodb_repo.rs  s3bucket_repo.rs
