[package]
name = "userprofile-api"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# dotenv = "0.15.0"

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.136"
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
regex = "1.5"
tokio = { version = "1.0", features = ["full"] }
aws-config = "0.56.1"
aws-sdk-s3 = "0.33.0"
rocket-multipart-form-data = "0.10.6"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"]